# beast_wss_file_transfer

./: .gitignore  CMakeLists.txt
client/: beast_wss_file_client.cpp  main.cpp
server/: beast_wss_file_server.cpp  beast_wss_file_server.h  main.cpp
